--- a/Sources/Background/Plant_Physiology/Plant_Physiology.tex
+++ b/Sources/Background/Plant_Physiology/Plant_Physiology.tex
@@ -19,7 +19,7 @@ The cuticle wax layer, upper epidermis, and mesophyll layer are the first layers
 
 The cuticle wax layer provides “the most critical adaptive trait for survival … the ability to retain water in increasingly dehydrating habitats” \cite{cuticle}.  It is the first line of defense for plants and acts as a barrier between water transpiration.
 
-The mesophyll layers contain chloroplasts that convert light energy into chemical energy and consists of two parts. The palisade mesophyll is made up of elongated, organized, compact cells that contain a large number of the chloroplasts.  The spongy mesophyll is irregular in shape and has a large amount of space between its cells to facilitate air and gas exchange \cite{plantexchange}.
+The mesophyll layers contain chloroplasts that convert light energy into chemical energy and consist of two parts. The palisade mesophyll is made up of elongated, organized, compact cells that contain a large number of the chloroplasts.  The spongy mesophyll is irregular in shape and has a large amount of space between its cells to facilitate air and gas exchange \cite{plantexchange}.
 
 The upper epidermis consists of very few chloroplasts, and allows most of the light to pass through to the mesophyll layers.
 
