--- a/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
+++ b/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Vegetation Indices and Spectral Responses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Spectral response patterns in remote sensing have been shown to useful \cite{mississippi}\cite{schott}\cite{harris} for determining the health of land vegetation.  The reflection and scattering of light off vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
+Spectral response patterns in remote sensing have been shown to useful \cite{mississippi}\cite{schott}\cite{harris} for determining the health of land vegetation.  The reflection and scattering of light from vegetation using different spectral bands of incident light allows for the classification of land objects and vegetation health.  The detector responses to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
 
 Vegetative Indices (VI) are ratios between different spectral responses for the purpose of determining the condition and health of plants.  Various combinations of frequencies have been combined to form standard VI’s utilizing the visible spectrum and the infrared spectrum. In its most basic form a vegetation index is defined by,
 %
@@ -20,9 +20,9 @@ The Normalized Difference Vegetation Index (NDVI) utilizes a plant's response to
 In comparison, clouds, snow, and water all have relatively high visible responses and low NIR response.  Therefore, little interference from these effects is contributed to the overall NDVI.  Moreover, most satellites average NDVI recordings over a few days to also alleviate any interference with clouds and other particles in the atmosphere \cite{remotesensing}.
 The NDVI takes advantage of the extreme shift in reflectance and transmittance for plants between the visible and near infrared regions known as the red gap shown in \cite{vanderbilt}.
 
-The reflectance curve for a plant leaf versus wavelength, shows that green light (~500-600nm) is the most reflected wavelength of light, and accounts for the green color of leaves. Red is (~600-750nm) and and blue light (~400-500nm) are shown to be highly absorbed.  This is due to these frequencies being used in photosynthesis and the high absorption of chlorophyll in these regions.
+The reflectance curve for a plant leaf versus wavelength, shows that green light (\text{\~500-600nm}) is the most reflected wavelength of light, and accounts for the green color of leaves. Red (\text{\~600-750nm}) and blue light (\text{\~400-500nm}) are shown to be highly absorbed.  This is due to these frequencies being used in photosynthesis and the high absorption of chlorophyll in these regions.
 
-It should also be noted that as leaves dry down and become brown in color, the reflectance curve in the red part of the spectrum greatly increases [photon vegetation].  The magnitude of this change is dependent on the species of plant, as well as the maturity of the individual leaf structures.
+It should also be noted that as leaves dry down and become brown in color, the reflectance curve in the red part of the spectrum greatly increases \cite{photonvegetation}.  The magnitude of this change is dependent on the species of plant as well as the maturity of the individual leaf structures.
 
 There are also metrics that utilize the visible spectrum such as the Visible Atmospherically Resistant Index (VARI) \cite{harris}.  It is defined as
 %
@@ -30,4 +30,4 @@ There are also metrics that utilize the visible spectrum such as the Visible Atm
     VARI = \frac{VIS_{green} - VIS_{red}}{VIS_{green} + VIS_{red}-VIS_{blue}}
 \end{align}
 %
-The vegetation indices described, all indirectly describe the amount of photosynthetic activity occurring within the plant.  They are sensitive to the local growing conditions, growth stage of plants, and other factors. The major spectral responses of pigments within plants have been studied in vivo in order to gain insight into how light is utilized on a metabolic level by plants, in the process of photosynthesis.
+The vegetation indices all indirectly describe the amount of photosynthetic activity occurring within the plant.  They are sensitive to the local growing conditions, growth stage of plants, and other factors. The major spectral responses of pigments within plants have been studied in vivo in order to gain insight into how light is utilized on a metabolic level by plants in the process of photosynthesis.
