--- a/Sources/Signing.tex
+++ b/Sources/Signing.tex
@@ -2,7 +2,7 @@
 \begin{center}
   \begin{minipage}{0.80\textwidth}
         This document certifies that the following committee members have reviewed and approved the thesis, \textit{"Polarization Enhanced Texture Analysis: With Applications to Precision Agriculture"} by Nicholas Ericksen,
-        for the partial fulfillment of the requirements towards a degree of Masters of Science at Manhattan College. The student, Nicholas Ericksen, hereby affirms this work is inline with the guidelines previously set forth by scientific and academic thought. \\
+        for the partial fulfillment of the requirements towards the degree of Master of Science at Manhattan College. The student, Nicholas Ericksen, hereby affirms this work is in line with the guidelines previously set forth by scientific and academic thought. \\
         \linebreak
         \hspace{25mm}
         \noindent \namesigdate{\textbf{Dr. Romeo Pascone, Advisor}}
