--- a/Thesis.tex
+++ b/Thesis.tex
@@ -189,7 +189,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{\texttt{Polarization Enhanced Texture Analysis}}
-\subtitle{With Applications to Precision Agriculture}
+\subtitle{w
+ith Applications to Precision Agriculture}
 \author{Nicholas Ericksen}
 
 \begin{document}
