--- a/Sources/Appendix/Appendix.tex
+++ b/Sources/Appendix/Appendix.tex
@@ -1,30 +1,31 @@
+% /Sources/Results/glcm/specular/0wk-1wk-H-filter-red-oak-rgb-specular.png
 \begin{appendices}
   \chapter{Appendix}
   %\subsection{Specular Results - All Species}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-all-specles-H-specular.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/H-filter-all-species-rgb.png}}
       \end{center}
       \caption{H filter GLCM Specular - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-all-specles-V-specular.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/V-filter-all-species-rgb.png}}
       \end{center}
       \caption{V filter GLCM Specular - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-all-specles-P-specular.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/P-filter-all-species-rgb.png}}
       \end{center}
       \caption{P filter GLCM Specular - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-all-specles-M-specular.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/M-filter-all-species-rgb.png}}
       \end{center}
       \caption{M filter GLCM Specular - All Species}
       \label{fig:polarization}
@@ -34,28 +35,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-H-all-species-diffuse-75.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/H-filter-all-species-rgb-diffuse.png}}
       \end{center}
       \caption{H filter GLCM Diffuse - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-V-all-species-diffuse-75.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/V-filter-all-species-rgb-diffuse.png}}
       \end{center}
       \caption{V filter GLCM Diffuse - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-P-all-species-diffuse-75.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/P-filter-all-species-rgb-diffuse.png}}
       \end{center}
       \caption{P filter GLCM Diffuse - All Species}
       \label{fig:polarization}
   \end{sidewaysfigure}
   \begin{sidewaysfigure}
       \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-M-all-species-diffuse-75.png}}
+          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/M-filter-all-species-rgb-diffuse.png}}
       \end{center}
       \caption{M filter GLCM Diffuse - All Species}
       \label{fig:polarization}
@@ -65,28 +66,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-specular-oak-0wk-1wk-H.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/0wk-1wk-H-filter-red-oak-rgb-specular.png}}
     \end{center}
     \caption{H filter GLCM Specular Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-specular-oak-0wk-1wk-V.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/0wk-1wk-V-filter-red-oak-rgb-specular.png}}
     \end{center}
     \caption{V filter GLCM Specular Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-specular-oak-0wk-1wk-P.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/0wk-1wk-P-filter-red-oak-rgb-specular.png}}
     \end{center}
     \caption{P filter GLCM Specular Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-specular-oak-0wk-1wk-M.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/0wk-1wk-M-filter-red-oak-rgb-specular.png}}
     \end{center}
     \caption{M filter GLCM Specular Decomposition - Red Oak}
     \label{fig:polarization}
@@ -96,28 +97,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-0wk-1wk-red-oak-H-diffuse.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/0wk-1wk-H-filter-red-oak-rgb-diffuse.png}}
     \end{center}
     \caption{H filter GLCM Diffuse Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-0wk-1wk-red-oak-V-diffuse.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/0wk-1wk-V-filter-red-oak-rgb-diffuse.png}}
     \end{center}
     \caption{V filter GLCM Diffuse Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-0wk-1wk-red-oak-P-diffuse.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/0wk-1wk-P-filter-red-oak-rgb-diffuse.png}}
     \end{center}
     \caption{P filter GLCM Diffuse Decomposition - Red Oak}
     \label{fig:polarization}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
     \begin{center}
-        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Appendix/GLCM-0wk-1wk-red-oak-M-diffuse.png}}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/diffuse/0wk-1wk-M-filter-red-oak-rgb-diffuse.png}}
     \end{center}
     \caption{M filter GLCM Diffuse Decomposition - Red Oak}
     \label{fig:polarization}
