--- a/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
+++ b/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
@@ -63,7 +63,7 @@ It has been shown that these parameters can be found by determining a sample's c
 \begin{align}
     \mathbf{Depolarization} = 1 - DOP
 \end{align}
-were $T_{max}$ and $T_{min}$ are the intensity transmittances through a polarizer, $n_1$, $n_2$ and $t$ are the refractive indices and thickness of a retarder \cite{chipman}.
+were $T_{max}$ and $T_{min}$ are the maximum and minimum intensity transmittances through a polarizer, $n_1$, $n_2$ and $t$ are the refractive indices and thickness of a retarder \cite{chipman}.
 
 For nondepolarizing materials, their MM can be converted into Jones matrices.   Examples of Mueller Matrices for common optical elements can be found in \cite{chipman}.  The general form of a linear polarizer with transmission axis at 0 degrees to the $x$ axis is
 %
@@ -77,7 +77,7 @@ For nondepolarizing materials, their MM can be converted into Jones matrices.   
     \end{bmatrix}
 \end{align}
 %
-where $q$ and $r$ are the attenuation coefficients for the $x$ and $y$ axis.
+where $q$ and $r$ are the intensity transmittances for the $x$ and $y$ axis.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Mueller Matrix Decomposition}
@@ -91,6 +91,6 @@ The effects of diattenuation, depolarization and retardance can be found to be r
         \mathbf{P} & \mathbf{m}
     \end{bmatrix}
 \end{align}
-The derivation of the MM decomposition was made known by Lu and Chipman and is reproduced in \cite{polarizedlight}. $\mathbf{D}^T$ is the diattenutation vector that describes the amount of decrease in overall polarization for each set of orthogonal polarization states. The m matrix represents the retardance of a material.
+The derivation of the MM decomposition was made known by Lu and Chipman and is reproduced in \cite{polarizedlight}. $\mathbf{D}^T$ is the diattenutation vector that describes the attenuation for each set of orthogonal polarization states. The $\mathbf{m}$ matrix represents the retardance of a material.
 
 $\mathbf{P}$ is the polarizance vector, and describes the amount of light that becomes polarized when unpolarized light is incident.  It is analogous to the effect of depolarization.  This vector can be measured by detecting the output Stokes vector of a material when unpolarized light is incident.  This effect is only evident in materials that create polarization.
