--- a/Sources/Background/Nature_of_Light/Scattering_Mechanisms.tex
+++ b/Sources/Background/Nature_of_Light/Scattering_Mechanisms.tex
@@ -2,13 +2,14 @@
 \subsection{Scattering Mechanisms}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Fresnel’s equations provide an explanation for light reflected and transmitted for ideal surfaces.  This is not the case with most man made and natural materials.  Therefore, more complex mechanisms must be considered when dealing with real world radiation scattering problems.  It has become popular in the field of remote sensing to denote the additional types of interactions as volume scattering and multiple scatter interaction.  Single scattering mechanisms are those governed solely by Fresnel’s equations.  The combination of these scattering mechanisms create the diffuse and specular components of reflection.
+Fresnel’s equations provide an explanation for light reflected and transmitted for ideal surfaces.  This is not the case with most man made and natural materials.  Therefore, more complex mechanisms must be considered when dealing with real world radiation scattering problems.  It has become popular in the field of remote sensing to denote the additional types of interactions as volume scattering and multiple scattering
+ interaction.  Single scattering mechanisms are those governed solely by Fresnel’s equations.  The combination of these scattering mechanisms create the diffuse and specular components of reflection.
 
-Single scattering mechanisms create a portion of reflectance known as specular reflectance.  They are often denoted as Type A photons in remote sensing models.  These interactions are highly polarized perpendicular to the plane of incidence as previously discussed. For perfectly smooth dielectrics, this is the dominate scattering mechanism.
+Single scattering mechanisms create a portion of reflectance known as specular reflectance.  They are often denoted as Type A photons in remote sensing models.  These interactions are highly polarized perpendicular to the plane of incidence as previously discussed. For perfectly smooth dielectrics, this is the dominant scattering mechanism.
 
 Volume scattering occurs when light is absorbed by a material and is readmitted in all directions, including back towards the surface of the material.  They are denoted Type B photons.  Transmittance of this energy back into the first medium obeys the laws of Fresnel’s equations, although the indices of refraction are reversed.  This mechanism accounts for absorption and other higher level light matter interactions, not explained solely by Fresnel’s equations.
 
-Multiple scattering occurs when either Type A or Type B photons interact with the material surface more than once when either being reflected or re transmitted out of the material.  These are denoted Type C photons \cite{schott}.  Figure 2.7 shows each type of interaction.
+Multiple scattering occurs when either Type A or Type B photons interact with the material surface more than once with either being reflected or re transmitted out of the material.  These are denoted Type C photons \cite{schott}.  Figure 2.7 shows each type of interaction.
 %
 \begin{figure}
     \begin{center}
@@ -18,7 +19,7 @@ Multiple scattering occurs when either Type A or Type B photons interact with th
     \label{fig:scattering}
 \end{figure}
 %
-In general type A photons create specular highlights from surfaces that are smooth.  Type B and C photons become more prevalent as a surface becomes rougher.  In most real world applications, surfaces are neither purely specular or purely diffuse.
+In general type A photons create specular highlights from surfaces that are smooth.  Type B and C photons become more prevalent as a surface becomes rougher.  In most real world applications, surfaces are neither purely specular nor purely diffuse.
 
 Surfaces that are perfectly smooth dielectrics are often considered to be purely specular reflectors of light.  Incident energy is transmitted in an idealized single ray of light from the surface.  Specular reflectors are single scattering mechanisms and result in purely polarized light due to the governance of Fresnel’s equations and are denoted as type A photons.
 %
@@ -43,14 +44,18 @@ Bidirectional Reflectance Distribution Functions (BRDF) have been created to mod
 The BRDF function is often defined in the form
 %
 \begin{align}
-    f_r(\omega_i, \omega_r) = \frac{dL_r(\omega_r)}{dE_i(\omega_i)}
+    f_r(\omega_i, \omega_r) = \frac{dL_r(\omega_r)}{dE_i(\omega_i)}[{sr}^{-1}]
 \end{align}
 %
-Each $\omega$ is a function of azimuth angle $\phi$ and zenith angle $\theta$. The input irradiance and output radiance are measured in units of steradians as shown in Figure 2.10.
+The units of the BRDF can be reduced from
+\begin{align}
+    [\frac{dL_r(\omega_r) units}{dE_i(\omega_i) units}] = [\frac{\frac{W}{m^2sr}}{\frac{W}{m^2}}] = [\frac{1}{sr}] = [{sr}^{-1}]
+\end{align}
+Each $\omega$ is a function of azimuth angle $\phi$ and zenith angle $\theta$. The input irradiance $E$ and output radiance $L$ are measured in units of watts per meter squared and watts per meter squared steradians as shown in Figure 2.10.
 where numerous models have been developed for the functions of $L$ and $E$ \cite{sparrow}\cite{brdfoverview}.  In its simplest case the surface is a purely diffuse reflector of incident light and the BRDF becomes
 %
 \begin{align}
-    f_r(\omega_i, \omega_r) = \frac{\rho}{\pi}
+    f_r(\omega_i, \omega_r) = \frac{\rho}{\pi}[{sr}^{-1}]
 \end{align}
 %
 where $\rho$ is the surface albedo, or proportion of light reflected from a surface \cite{nicodemus} and ranges from $0\leq\rho\leq1$.  A general diagram can be found in Figure 2.9.  In the most general case the portion of reflectance that is purely specular can be thought of as a $\delta$ function.  Most surfaces create non-ideal reflections made up of both specular and diffuse components.
@@ -63,4 +68,4 @@ where $\rho$ is the surface albedo, or proportion of light reflected from a surf
     \label{fig:scattering}
 \end{figure}
 %
-The notion of a surface being rough, smooth, fine or coarse come with the connotation of touch and the feeling of a materials' surface.  They are textures.
+The notion of a surface being rough, smooth, fine or coarse comes with the connotation of touch and the feeling of a materials' surface.  They are textures.
